--- a/public/stylesheets/layout/_checkout.scss
+++ b/public/stylesheets/layout/_checkout.scss
@@ -2,4 +2,6 @@
 .checkout {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
 }
