--- a/public/stylesheets/layout/_form.scss
+++ b/public/stylesheets/layout/_form.scss
@@ -5,7 +5,8 @@
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 2px;
-  width: 45%;
+  width: 100%;
+  max-width: 400px;
   padding: 20px;
   margin-left: 5px;
   border-radius: 5px;
